# fi2010

./: .gitignore  README.md  pyproject.toml
data/: make.ipynb
fi2010/: __init__.py
